Small tweaks in syntax

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-/.vscode
+*.properties
+
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
+.mvn/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -58,5 +60,3 @@ build/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
-
-*.properties
